--- a/mc-exchange-backend/package.json
+++ b/mc-exchange-backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.75.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
