Updated backend URL, Mod name & Mod versio to beacon-1.0.1-beta

--- a/mc-exchange-chat-relay/gradle.properties
+++ b/mc-exchange-chat-relay/gradle.properties
@@ -12,9 +12,9 @@ loader_version=0.16.9
 loom_version=1.10.1
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.0.1-beta
 maven_group=com.mcexchange
-archives_base_name=chat-relay
+archives_base_name=beacon
 
 # Dependencies
 fabric_version=0.136.0+1.21.8
