--- a/mc-exchange-frontend/shop-ui/package.json
+++ b/mc-exchange-frontend/shop-ui/package.json
@@ -14,6 +14,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
+    "axios": "^1.13.2",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
